--- a/back/Core/AnimeTracker.Api.Core.csproj
+++ b/back/Core/AnimeTracker.Api.Core.csproj
@@ -15,7 +15,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Abstractions\Example.Api.Abstractions.csproj"/>
+		<ProjectReference Include="..\Abstractions\AnimeTracker.Api.Abstractions.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
