--- a/back/Db/AnimeTracker.Api.Adapters.Mongo.csproj
+++ b/back/Db/AnimeTracker.Api.Adapters.Mongo.csproj
@@ -12,7 +12,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Abstractions\Example.Api.Abstractions.csproj"/>
+		<ProjectReference Include="..\Abstractions\AnimeTracker.Api.Abstractions.csproj" />
 	</ItemGroup>
 
 </Project>
