--- a/back/Rest/AnimeTracker.Api.Adapters.Rest.csproj
+++ b/back/Rest/AnimeTracker.Api.Adapters.Rest.csproj
@@ -5,10 +5,11 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<EnablePreviewFeatures>True</EnablePreviewFeatures>
-
+		<RootNamespace>AnimeTracker.Api.Adapters.Rest</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="HtmlAgilityPack" Version="1.11.61" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1"/>
 		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0"/>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
@@ -20,7 +21,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Abstractions\Example.Api.Abstractions.csproj"/>
+		<ProjectReference Include="..\Abstractions\AnimeTracker.Api.Abstractions.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
