--- a/back/Web/appsettings.json
+++ b/back/Web/appsettings.json
@@ -1,5 +1,11 @@
 {
-	"Database": "mongodb://root:root@192.168.0.59:6003/admin",
+	"Database": "mongodb://root:root@localhost:27117,localhost:27118/anime-tracker?retryWrites=true&loadBalanced=false&readPreference=secondaryPreferred&connectTimeoutMS=10000&authSource=admin&authMechanism=SCRAM-SHA-256",
+	"RabbitMq": {
+		"Nodes": ["localhost:5672", "localhost:5673", "localhost:5674"],
+		"Username": "guest",
+		"Password": "guest",
+		"VirtualHost": "anime-tracker"
+	},
 	"Endpoints": {
 		"Authentication": "http://localhost:4001"
 	},
