--- a/back/Core/AnimeTracker.Api.Core.csproj
+++ b/back/Core/AnimeTracker.Api.Core.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="8.0.0"/>
 		<PackageReference Include="Scrutor" Version="4.2.2"/>
 		<PackageReference Include="Serilog.Sinks.Console" Version="6.0.0"/>
+		<PackageReference Include="Mapster" Version="7.4.0"/>
 		<PackageReference Include="System.Runtime.Caching" Version="8.0.0"/>
 	</ItemGroup>
 
