--- a/back/Rest/AnimeTracker.Api.Adapters.Rest.csproj
+++ b/back/Rest/AnimeTracker.Api.Adapters.Rest.csproj
@@ -9,11 +9,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="FlareSolverrSharp" Version="3.0.7" />
 		<PackageReference Include="HtmlAgilityPack" Version="1.11.61" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1"/>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0"/>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
-		<PackageReference Include="Polly" Version="8.4.0"/>
+		<PackageReference Include="Polly" Version="8.4.1" />
 		<PackageReference Include="Scrutor" Version="4.2.2"/>
 		<PackageReference Include="Serilog" Version="4.0.0"/>
 		<PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0"/>
