--- a/back/Web/AnimeTracker.Api.Web.csproj
+++ b/back/Web/AnimeTracker.Api.Web.csproj
@@ -10,8 +10,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.6"/>
-		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1"/>
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.7" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
 		<PackageReference Include="Scrutor" Version="4.2.2"/>
 		<PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0"/>
 		<PackageReference Include="Serilog.Sinks.Console" Version="6.0.0"/>
@@ -23,6 +23,8 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Abstractions\AnimeTracker.Api.Abstractions.csproj" />
+		<ProjectReference Include="..\AnimeTracker.Api.Adapters.Hangfire\AnimeTracker.Api.Adapters.Hangfire.csproj" />
+		<ProjectReference Include="..\AnimeTracker.Api.Adapters.MassTransit\AnimeTracker.Api.Adapters.MassTransit.csproj" />
 		<ProjectReference Include="..\Rest\AnimeTracker.Api.Adapters.Rest.csproj" />
 		<ProjectReference Include="..\Core\AnimeTracker.Api.Core.csproj" />
 		<ProjectReference Include="..\Db\AnimeTracker.Api.Adapters.Mongo.csproj" />
