Back -- Ajout des propriétés Score et Popularity

--- a/back/Web/appsettings.json
+++ b/back/Web/appsettings.json
@@ -23,6 +23,6 @@
 	},
 	"OpenTelemetry": {
 		"CollectorUri": "http://localhost:4317",
-		"Service": "react-api-template"
+		"Service": "anime-tracker"
 	}
 }
